# .dotfiles

./: .gitignore  .vimrc  README.md  _vimrc  _vimrc.lnk  install  install_dot  links.bat  req.md
config/: init.vim
cursor/: keybindings.json  settings.json
ghostty/: config
ghostty/.config/ghostty/: config
git/.config/git/: config
home/: AGENTS.md
home/.config/: chrome-flags.conf
home/.local/share/applications/: google-chrome.desktop
hypr/: hyprland.conf  input.conf  looknfeel.conf
hypr/.config/hypr/: autostart.conf  bindings.conf  hypridle.conf  hyprland.conf  looknfeel.conf  monitors.conf  startup-layout.sh
nvim/.config/dconf/: user
nvim/.config/github-copilot/: hosts.json
nvim/.config/nvim/: init.lua  init.vim  lazy-lock.json
nvim/.config/wslu/: baseexec
opencode/.config/opencode/: opencode.json
scripts/: a  hello  home
scripts/_a/: main.py
scripts/_hello/: main.py
scripts/home-cli/: .gitignore  README.md  pyproject.toml
scripts/home-cli/src/home_cli/: config.py  main.py
scripts/home-cli/src/home_cli/backends/: assistant.py
systemd/user/: bluetooth-audio-switcher.service
tmux/: .tmux.conf
walker/: config.toml
waybar/: config.jsonc
waybar/.config/waybar/: ai-limits.sh  config.jsonc  style.css
zsh/: .zshrc
~/.nvim/undodir/: %home%mokronos%.dotfiles%nvim%.config%nvim%init.lua  %home%mokronos%.dotfiles%nvim%.config%nvim%lua%general.lua  %home%mokronos%.dotfiles%nvim%.config%nvim%lua%options.lua  %home%mokronos%.dotfiles%nvim%.config%nvim%lua%plugins.lua  %home%mokronos%.dotfiles%tmux%.tmux.conf
(+62 files in other folders)
